<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dev.tindallia.registration.MainActivity"
    android:gravity="left"
    android:padding="10dp"
    android:orientation="vertical"
    android:id="@+id/mainView"
    android:background="@drawable/ic_bg"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headline1"
        android:textStyle="bold"
        android:textColor="@color/purple_700"
        android:textSize="36sp"
        android:layout_marginTop="25dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etUsername"
        android:height="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usernameHint"
        android:layout_marginTop="15dp"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        />

    <!-- <AutoCompleteTextView
         android:id="@+id/etGender"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:height="48dp"
         android:layout_marginTop="15dp"
         android:focusable="false"
         android:completionThreshold="0"
         android:hint="@string/genderHint"
         android:inputType="text"
         android:lines="1"
         android:maxLines="1"
         />-->

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spGender"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:height="48dp"
        android:completionThreshold="0"
        android:entries="@array/genderList"
        android:focusable="false"
        android:hint="@string/genderHint"
        android:inputType="text"

        android:lines="1"
        android:maxLines="1" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etDocId"
        android:height="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/docIdHint"
        android:layout_marginTop="15dp"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etDateOfBirth"
        android:height="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dobHint"
        android:layout_marginTop="15dp"
        android:focusable="false"
        android:inputType="date"
        android:lines="1"
        android:maxLines="1"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button"
            app:cornerRadius="120dp"
            android:layout_gravity="bottom"
            android:text="@string/btnNextText"/>
    </LinearLayout>

</LinearLayout>