<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dev.tindallia.registration.VerifyDataActivity"
    android:gravity="left"
    android:padding="10dp"
    android:orientation="vertical"
    android:id="@+id/mainView"
    android:background="@drawable/ic_bg"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headline1"
        android:textStyle="bold"
        android:textColor="@color/purple_700"
        android:textSize="36sp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="50dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/usernameHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:textSize="18sp"
            android:paddingTop="10dp"/>
        <TextView
            android:id="@+id/tvUsername"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textSize="18sp"
            android:paddingTop="10dp"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/genderHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:textSize="18sp"
            android:paddingTop="10dp"/>
        <TextView
            android:id="@+id/tvGender"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textSize="18sp"
            android:paddingTop="10dp"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/docIdHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:textSize="18sp"
            android:paddingTop="10dp"/>
        <TextView
            android:id="@+id/tvDocId"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textSize="18sp"
            android:paddingTop="10dp"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/dobHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:textSize="18sp"
            android:paddingTop="10dp"/>
        <TextView
            android:id="@+id/tvDob"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textSize="18sp"
            android:paddingTop="10dp"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <ProgressBar
            android:id="@+id/pbProgress"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/purple_200"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button"
            app:cornerRadius="120dp"
            android:layout_gravity="bottom"
            android:text="@string/btnSubmitText"/>
    </LinearLayout>

</LinearLayout>